calculator screen overflow fixed
In cases where the results were too long, the numbers left the calculator screen. For now, modifying the CSS was the most feasible solution for me.

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body{
 .calcBody__display {
     padding: .5em;
     background-color: rgb(190, 210, 170);
+    word-wrap: break-word;
 }
 
 .display p {
